[package]
name = "daytime"
version = "0.1.0"
authors = ["Martin Ashby <martin@ashbysoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
async-std = { version = "1.6", features = ["attributes"] }
futures = "0.3"
log = "0.4"
env_logger = "0.7"
argh = "0.1"
